@@ -36,6 +36,7 @@ Changes in SG 1.1
 - Added sine "pendulum style" rotation to func_rotating
 - Number of curve's subdivisions has been raised to improve visual quality
 - Added to system/graphics menu an entry for far-clipping, map Level Of Detail, and curves details
+- Falling damage are now progressive
 
 Changes in SG 1.1b4-20100116
 ******************
